# Schematic

./: .gitignore  Makefile  README.md  go.mod
cfn/: lambda-function.json  traverse.go  traverse_test.go
cmd/translator/: main.go
configuration/: model.rs
data/: all-schema-combined.json
src/: cfn.go  cfn_test.go  main.go  main.py  snapshot.go  snapshot_test.go  test_transform.py  test_translate.py  test_traverse.py  test_util.py  transform.go  transform.py  translate.py  translator.go  traverse.py  util.py
src/snapshots/: interface_enum.rs.snap  relationship.rs.snap  relationship_no_union.rs.snap  union_enum.rs.snap
src/templates/: interface_enum.go.impl  interface_enum.go.tmpl  relationship.go.tmpl  resource_struct.go.tmpl  union_enum.go.tmpl
test/: .gitignore  Cargo.toml
test/src/tools/: sdl.rs
tools/: name_transformation.go  name_transformation_test.go
translator/: helpers.go  resource_name.go  snapshot.go  snapshot_test.go  translate.go  translate_test.go
translator/snapshots/: all.rs.snap  aws_resource_impl.rs.snap  interface_enum.rs.snap  relationship.rs.snap  resource_struct.rs.snap  union_enum.rs.snap
translator/templates/: all.go.tmpl  aws_resource_impl.go.tmpl  interface_enum.go.tmpl  relationship.go.tmpl  resource_struct.go.tmpl  union_enum.go.tmpl
